<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/edtcorreoSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logou" />

    <Button
        android:id="@+id/btnrecuperarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:text="@string/btnrecuperarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregistrarseSesion" />

    <Button
        android:id="@+id/btnregistrarseSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnregistrarseSesion"
        app:layout_constraintBottom_toTopOf="@+id/btnrecuperarSesion"
        app:layout_constraintEnd_toEndOf="@+id/btnrecuperarSesion"
        app:layout_constraintTop_toBottomOf="@+id/btningresarSesion" />

    <ImageButton
        android:id="@+id/btningresarSesion"
        android:layout_width="138dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnregistrarseSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpasswordSesion"
        app:srcCompat="@drawable/ingresar" />

    <EditText
        android:id="@+id/edtpasswordSesion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/edtpasswordSesion"
        app:layout_constraintBottom_toTopOf="@+id/btningresarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtcorreoSesion" />

    <EditText
        android:id="@+id/edtcorreoSesion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:text="@string/edtcorreoSesion"
        app:layout_constraintBottom_toTopOf="@+id/edtpasswordSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>