<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaMateria">

    <TextView
        android:id="@+id/txttituloMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="34dp"
        android:text="@string/txttituloMateria"
        app:layout_constraintBottom_toTopOf="@+id/spnSemestresAsignados"
        app:layout_constraintStart_toStartOf="@+id/spnSemestresAsignados"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/txttituloMateria"
        app:layout_constraintEnd_toEndOf="@+id/txttituloMateria"
        app:layout_constraintTop_toBottomOf="@+id/txtdatosUsuarioMateria"
        app:srcCompat="@drawable/logou" />

    <TextView
        android:id="@+id/txtdatosUsuarioMateria"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="21dp"
        android:background="#009688"
        android:text="@string/txtdatosUsuarioMateria"
        android:textColor="#FDFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnguardarMateria"
        android:layout_width="81dp"
        android:layout_height="85dp"
        android:layout_marginBottom="197dp"
        android:background="@drawable/guardar2"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtmateriaNueva" />

    <Spinner
        android:id="@+id/spnSemestresAsignados"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/edtmateriaNueva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttituloMateria" />

    <EditText
        android:id="@+id/edtmateriaNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="Nombre de la Materia"
        android:inputType="textPersonName"
        android:text="@string/edtmateriaNueva"
        app:layout_constraintBottom_toTopOf="@+id/btnguardarMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSemestresAsignados" />

</androidx.constraintlayout.widget.ConstraintLayout>