<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoSemestre">

    <TextView
        android:id="@+id/txttituloMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="42dp"
        android:text="@string/txttituloSemestre"
        app:layout_constraintBottom_toTopOf="@+id/spnSemestresAsignados"
        app:layout_constraintStart_toStartOf="@+id/spnSemestresAsignados"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="46dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/txttituloMateria"
        app:layout_constraintEnd_toEndOf="@+id/txttituloMateria"
        app:layout_constraintTop_toBottomOf="@+id/txtdatosUsuarioMateria"
        app:srcCompat="@drawable/logou" />

    <TextView
        android:id="@+id/txtdatosUsuarioMateria"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="60dp"
        android:background="#009688"
        android:text="@string/txtdatosUsuarioSemestre"
        android:textColor="#FDFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnguardarMateria"
        android:layout_width="79dp"
        android:layout_height="86dp"
        android:layout_marginBottom="197dp"
        android:background="@drawable/guardar2"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSemestresAsignados" />

    <Spinner
        android:id="@+id/spnSemestresAsignados"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/btnguardarMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttituloMateria" />

</androidx.constraintlayout.widget.ConstraintLayout>